--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ASSET_URL=http://192.168.1.14/sportscenter/public
+API_URL=http://192.168.1.14/saraga-admin/public/api
 
 APP_NAME=Laravel
 APP_ENV=local
