add validator for field select

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
-ASSET_URL=http://192.168.1.14/sportscenter/public
-API_URL=http://192.168.1.14/saraga-admin/public/api
+ASSET_URL=http://localhost/sportscenter/public
+API_URL=http://localhost/saraga-admin/public/api
+SNAP_URL=https://app.sandbox.midtrans.com/snap
+SERVER_KEY=SB-Mid-server-kdAlMMkYVv3NMIc3rQJgBrMV:
+CLIENT_KEY=SB-Mid-client-nV3K5-C212vEHRkK
 
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:H1r4/7PED9HZXwblrl5eFmBBGNl0hcpTFk+BTVE3tjc=
 APP_DEBUG=true
-APP_URL=http://192.168.1.14/sportscenter
+APP_URL=http://localhost/sportscenter
 
 LOG_CHANNEL=stack
 
