update promo display with tags

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 ASSET_URL=http://localhost/sportscenter/public
 API_URL=http://localhost/saraga-admin/public/api
 SNAP_URL=https://app.sandbox.midtrans.com/snap
+MIDTRANS_API_URL=https://api.sandbox.midtrans.com
+
 SERVER_KEY=SB-Mid-server-kdAlMMkYVv3NMIc3rQJgBrMV:
 CLIENT_KEY=SB-Mid-client-nV3K5-C212vEHRkK
 
