--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ API_URL=http://localhost/saraga-admin/public/api
 SNAP_URL=https://app.sandbox.midtrans.com/snap
 MIDTRANS_API_URL=https://api.sandbox.midtrans.com
 
+MIDTRANS PAULUS
 SERVER_KEY=SB-Mid-server-kdAlMMkYVv3NMIc3rQJgBrMV:
 CLIENT_KEY=SB-Mid-client-nV3K5-C212vEHRkK
 
